samples/_failures_safe/1761043416_b9885b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db70a86a.c: In function ‘main’:
./samples/SAFE/__tmp_db70a86a.c:153:17: error: expected declaration or statement at end of input
  153 |                 } else if (status == -1) {
      |                 ^
./samples/SAFE/__tmp_db70a86a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db70a86a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db70a86a.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db70a86a.c:153:17: error: expected declaration or statement at end of input
